Modified bad command.
*map -> *noremap
:.* -> .*

--- a/.vim/neocomplcache.conf
+++ b/.vim/neocomplcache.conf
@@ -5,9 +5,9 @@ let g:neocomplcache_enable_at_startup = 1
 " スニペットファイルの配置場所
 let g:NeoComplCache_SnippetsDir = '~/.vim/snippets'
  
-imap <C-k> <Plug>(neocomplcache_snippets_expand)
-smap <C-k> <Plug>(neocomplcache_snippets_expand)
-imap <expr><TAB> neocomplcache#sources#snippets_complete#expandable() ? "\<Plug>(neocomplcache_snippets_expand)" : pumvisible() ? "\<C-n>" : "\<TAB>"
+inoremap <C-k> <Plug>(neocomplcache_snippets_expand)
+snoremap <C-k> <Plug>(neocomplcache_snippets_expand)
+inoremap <expr><TAB> neocomplcache#sources#snippets_complete#expandable() ? "\<Plug>(neocomplcache_snippets_expand)" : pumvisible() ? "\<C-n>" : "\<TAB>"
 
 inoremap <expr><C-g> neocomplcache#undo_completion()
 inoremap <expr><C-l> neocomplcache#complete_common_string()
