Added neosnippet plugin.

--- a/.vim/neobundle.conf
+++ b/.vim/neobundle.conf
@@ -14,6 +14,7 @@ NeoBundle 'Shougo/vim-vcs'
 NeoBundle 'Shougo/vimshell'
 NeoBundle 'Shougo/vimfiler'
 NeoBundle 'Shougo/neocomplcache'
+NeoBundle 'Shougo/neosnippet'
 NeoBundle 'h1mesuke/unite-outline'
 NeoBundle 'thinca/vim-quickrun'
 NeoBundle 'thinca/vim-openbuf'
