Modified git plugin.

--- a/.vim/neobundle.conf
+++ b/.vim/neobundle.conf
@@ -10,7 +10,6 @@ NeoBundle 'git.zip'
 """ for develop
 NeoBundle 'Shougo/unite.vim'
 NeoBundle 'Shougo/vimproc'
-NeoBundle 'Shougo/vim-vcs'
 NeoBundle 'Shougo/vimshell'
 NeoBundle 'Shougo/vimfiler'
 NeoBundle 'Shougo/neocomplcache'
@@ -21,6 +20,7 @@ NeoBundle 'thinca/vim-openbuf'
 NeoBundle 'tyru/open-browser.vim'
 NeoBundle 'vim-scripts/Processing'
 NeoBundle 'vim-scripts/sudo.vim'
+NeoBundle 'tpope/vim-fugitive'
 
 " NeoBundle 'cocoa.vim'
 
