--- a/.vim/neobundle.conf
+++ b/.vim/neobundle.conf
@@ -17,11 +17,11 @@ NeoBundle 'Shougo/neosnippet'
 NeoBundle 'h1mesuke/unite-outline'
 NeoBundle 'thinca/vim-quickrun'
 NeoBundle 'thinca/vim-openbuf'
+NeoBundle 'thinca/vim-singleton'
 NeoBundle 'tyru/open-browser.vim'
 NeoBundle 'vim-scripts/Processing'
 NeoBundle 'vim-scripts/sudo.vim'
 NeoBundle 'tpope/vim-fugitive'
-
 " NeoBundle 'cocoa.vim'
 
 """ for twitter
