--- a/.vim/neocomplcache.conf
+++ b/.vim/neocomplcache.conf
@@ -2,47 +2,22 @@
 " neocomplcache の自動有効化
 let g:neocomplcache_enable_at_startup = 1
 
-" スニペットファイルの配置場所
-let g:NeoComplCache_SnippetsDir = '~/.vim/snippets'
- 
-inoremap <C-k> <Plug>(neocomplcache_snippets_expand)
-snoremap <C-k> <Plug>(neocomplcache_snippets_expand)
-inoremap <expr><TAB> neocomplcache#sources#snippets_complete#expandable() ? "\<Plug>(neocomplcache_snippets_expand)" : pumvisible() ? "\<C-n>" : "\<TAB>"
-
-inoremap <expr><C-g> neocomplcache#undo_completion()
-inoremap <expr><C-l> neocomplcache#complete_common_string()
+""" スニペットのディレクトリ設定
+let g:neosnippet#snippets_directory = $HOME . '/.vim/snippets'
 
 " 大文字小文字を区別する
-let g:NeoComplCache_SmartCase = 1
-let g:neocomplcache_snippets_dir = $HOME . '/.vim/snippets'
+let g:neocomplcache_smart_case = 1
 
 " キャメルケース補完を有効にする
-let g:NeoComplCache_EnableCamelCaseCompletion = 1
+let g:neocomplcache_enable_camelcase_completion = 1
 
 " アンダーバー補完を有効にする
-let g:NeoComplCache_EnableUnderbarCompletion = 1
+let g:neocomplcache_enable_underbar_completion = 1
+"
+"" シンタックスファイルの補完対象キーワードとする最小の長さ
+let g:neocomplcache_min_syntax_length = 3
+let g:neocomplcache_min_keyword_length = 3
 
-" シンタックスファイルの補完対象キーワードとする最小の長さ
-let g:NeoComplCache_MinSyntaxLength = 3
-let g:NeoComplCache_MinKeywordLength = 3
-
-" プラグイン毎の補完関数を呼び出す文字数
-let g:NeoComplCache_PluginCompletionLength = {
-  \ 'snipMate_complete' : 1,
-  \ 'keyword_complete'  : 2,
-  \ 'syntax_complete'   : 2
-  \ }
-
-" Recommended key-mappings.
-" <CR>: close popup and save indent.
-inoremap <expr><CR>  neocomplcache#smart_close_popup() . "\<CR>"
-" <TAB>: completion.
-inoremap <expr><TAB>  pumvisible() ? "\<C-n>" : "\<TAB>"
-" <C-h>, <BS>: close popup and delete backword char.
-inoremap <expr><C-h> neocomplcache#smart_close_popup()."\<C-h>"
-inoremap <expr><BS> neocomplcache#smart_close_popup()."\<C-h>"
-inoremap <expr><C-y>  neocomplcache#close_popup()
-inoremap <expr><C-e>  neocomplcache#cancel_popup()
-
-" AutoComplPop like behavior.
-"let g:neocomplcache_enable_auto_select = 1
+inoremap <expr><C-l>
+\ neosnippet#expandable() <Bar><Bar> neosnippet#jumpable() ?
+\ "\<Plug>(neosnippet_expand_or_jump)" : "\<C-n>"
