--- a/.vim/neocomplcache.conf
+++ b/.vim/neocomplcache.conf
@@ -18,6 +18,6 @@ let g:neocomplcache_enable_underbar_completion = 1
 let g:neocomplcache_min_syntax_length = 3
 let g:neocomplcache_min_keyword_length = 3
 
-inoremap <expr><C-l>
+imap <expr><C-l>
 \ neosnippet#expandable() <Bar><Bar> neosnippet#jumpable() ?
 \ "\<Plug>(neosnippet_expand_or_jump)" : "\<C-n>"
