--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule ".vim/pack/b/start/sonictemplate-vim"]
 	path = .vim/pack/b/start/sonictemplate-vim
 	url = https://github.com/mattn/sonictemplate-vim
+[submodule ".vim/pack/b/start/neosnippet.vim"]
+	path = .vim/pack/b/start/neosnippet.vim
+	url = https://github.com/Shougo/neosnippet.vim
+[submodule ".vim/pack/completion/start/neocomplete.vim"]
+	path = .vim/pack/completion/start/neocomplete.vim
+	url = https://github.com/Shougo/neocomplete.vim
