--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule ".vim/pack/completion/start/neocomplete.vim"]
 	path = .vim/pack/completion/start/neocomplete.vim
 	url = https://github.com/Shougo/neocomplete.vim
+[submodule ".vim/pack/b/opt/vim-singleton"]
+	path = .vim/pack/b/opt/vim-singleton
+	url = http://github.com/thinca/vim-singleton
