--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/pack/golang/opt/vim-go-extra"]
 	path = .vim/pack/golang/opt/vim-go-extra
 	url = git://github.com/vim-jp/vim-go-extra
+[submodule ".vim/pack/b/opt/buffer_selector.vim"]
+	path = .vim/pack/b/opt/buffer_selector.vim
+	url = https://github.com/mikoto2000/buffer_selector.vim
