--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule ".vim/pack/test/opt/vital-safe-string"]
 	path = .vim/pack/test/opt/vital-safe-string
 	url = https://github.com/haya14busa/vital-safe-string
+[submodule ".vim/pack/test/opt/vim-themis"]
+	path = .vim/pack/test/opt/vim-themis
+	url = https://github.com/thinca/vim-themis
