--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule ".vim/pack/test/opt/vim-themis"]
 	path = .vim/pack/test/opt/vim-themis
 	url = https://github.com/thinca/vim-themis
+[submodule ".vim/pack/b/opt/file_selector.vim"]
+	path = .vim/pack/b/opt/file_selector.vim
+	url = http://github.com/mikoto2000/file_selector.vim
