--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule ".vim/pack/b/start/vim-color-forest-night"]
 	path = .vim/pack/b/start/vim-color-forest-night
 	url = https://github.com/sainnhe/vim-color-forest-night.git
+[submodule ".vim/pack/lsp/opt/vim-lsp-tiny-snippet-support"]
+	path = .vim/pack/lsp/opt/vim-lsp-tiny-snippet-support
+	url = https://github.com/mikoto2000/vim-lsp-tiny-snippet-support.git
