submodule の URL を修正。

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/mattn/sonictemplate-vim
 [submodule ".vim/pack/b/opt/vim-singleton"]
 	path = .vim/pack/b/opt/vim-singleton
-	url = http://github.com/thinca/vim-singleton
+	url = https://github.com/thinca/vim-singleton
 [submodule ".vim/pack/b/start/restart.vim"]
 	path = .vim/pack/b/start/restart.vim
 	url = https://github.com/tyru/restart.vim
@@ -30,10 +30,10 @@
 	url = https://github.com/thinca/vim-themis
 [submodule ".vim/pack/b/opt/file_selector.vim"]
 	path = .vim/pack/b/opt/file_selector.vim
-	url = http://github.com/mikoto2000/file_selector.vim
+	url = https://github.com/mikoto2000/file_selector.vim
 [submodule ".vim/pack/b/opt/outline.vim"]
 	path = .vim/pack/b/opt/outline.vim
-	url = http://github.com/mikoto2000/outline.vim
+	url = https://github.com/mikoto2000/outline.vim
 [submodule ".vim/pack/c/opt/c_previewer.vim"]
 	path = .vim/pack/c/opt/c_previewer.vim
 	url = https://github.com/mikoto2000/c_previewer.vim
