--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "pack/b/opt/vim-suda"]
 	path = pack/b/opt/vim-suda
 	url = https://github.com/lambdalisue/vim-suda.git
+[submodule "pack/b/opt/keyinput-delayer.vim"]
+	path = pack/b/opt/keyinput-delayer.vim
+	url = https://github.com/mikoto2000/keyinput-delayer.vim
