--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "pack/github/start/copilot.vim"]
 	path = pack/github/start/copilot.vim
 	url = https://github.com/github/copilot.vim.git
+[submodule "pack/b/opt/vim-surround"]
+	path = pack/b/opt/vim-surround
+	url = https://github.com/tpope/vim-surround.git
